--- a/module-3/lab-nlp/challenge-2.ipynb
+++ b/module-3/lab-nlp/challenge-2.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
     "            s = s.replace(character,\" \")\n",
     "    return print(' '.join(s.split()))\n",
     "            \n",
-    "clean_up(\"@Ironhack's-#Q website 776-is http://ironhack.com [(2018)]\\\")\")"
+    "clean_up(\"@Ironhack's-#Q website 776-is http://ironhack.com [(2018)]\\\")\")\n"
    ]
   },
   {
@@ -74,20 +74,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 's', 'q', 'website', 'is']\n"
+     ]
+    }
+   ],
    "source": [
     "def tokenize(s):\n",
-    "    \"\"\"\n",
-    "    Tokenize a string.\n",
-    "\n",
-    "    Args:\n",
-    "        s: String to be tokenized.\n",
-    "\n",
-    "    Returns:\n",
-    "        A list of words as the result of tokenization.\n",
-    "    \"\"\""
+    "    s = s.split(' ')\n",
+    "    return print(s)\n",
+    "    \n",
+    "tokenize('ironhack s q website is')\n"
    ]
   },
   {
@@ -117,20 +120,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['unawar', 'tree', 'most', 'number', 'use', 'word', 'in', 'a', 'consequ', 'that']\n",
+      "['unawar', 'tree', 'most', 'number', 'use', 'word', 'in', 'a', 'consequ', 'that']\n"
+     ]
+    }
+   ],
    "source": [
+    "#import nltk.stem.porter\n",
+    "from nltk.stem.snowball import SnowballStemmer\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "\n",
     "def stem_and_lemmatize(l):\n",
-    "    \"\"\"\n",
-    "    Perform stemming and lemmatization on a list of words.\n",
     "\n",
-    "    Args:\n",
-    "        l: A list of strings.\n",
+    "    #stemmer = PorterStemmer()\n",
+    "    #stemmed = stemmer.stem(l)\n",
+    "    #print(' '.join(stemmed))\n",
+    "    \n",
+    "    stemmer = SnowballStemmer('english', ignore_stopwords = True)\n",
+    "    stem = []\n",
+    "    for word in l:\n",
+    "        stemmed = stemmer.stem(word)\n",
+    "        stem.append(stemmed)\n",
+    "    print(stem)\n",
+    "    \n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "    lemma = []\n",
+    "    for word in stem:\n",
+    "        lemmas = (lemmatizer.lemmatize(word))\n",
+    "        lemma.append(lemmas)\n",
+    "    return print(lemma)\n",
     "\n",
-    "    Returns:\n",
-    "        A list of strings after being stemmed and lemmatized.\n",
-    "    \"\"\""
+    "stem_and_lemmatize(['unaware', 'trees', 'most', 'numbers', 'used', 'words', 'in', 'a', 'consequently', 'that'])"
    ]
   },
   {
