--- a/module-3/lab-nlp/challenge-2.ipynb
+++ b/module-3/lab-nlp/challenge-2.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
     "    numbers_to_string = ''.join(numbers)\n",
     "    s = s.replace(numbers_to_string,'')\n",
     "    \n",
-    "    special_characters = [\"'\",'\"','@','\\\\','`','*','_','{','}','[',']','(',')','>','<','#','+','-','.','!','$','|','€' ,'%','&','/','\\'']\n",
+    "    special_characters = [\"'\",'\"','@','\\\\','`','*','_','{','}','[',']','(',')','>','<','#','+','-','.',',','!','$','|','€' ,'%','&','/','\\'']\n",
     "    \n",
     "    for character in s:\n",
     "        if character in special_characters:\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -120,15 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['unawar', 'tree', 'most', 'number', 'use', 'word', 'in', 'a', 'consequ', 'that']\n",
-      "['unawar', 'tree', 'most', 'number', 'use', 'word', 'in', 'a', 'consequ', 'that']\n"
+      "['greater', 'tree', 'most', 'number', 'use', 'word', 'in', 'a', 'consequ', 'that']\n",
+      "['greater', 'tree', 'most', 'number', 'use', 'word', 'in', 'a', 'consequ', 'that']\n"
      ]
     }
    ],
@@ -157,7 +157,7 @@
     "        lemma.append(lemmas)\n",
     "    return print(lemma)\n",
     "\n",
-    "stem_and_lemmatize(['unaware', 'trees', 'most', 'numbers', 'used', 'words', 'in', 'a', 'consequently', 'that'])"
+    "stem_and_lemmatize(['greater', 'trees', 'most', 'numbers', 'used', 'words', 'in', 'a', 'consequently', 'that'])"
    ]
   },
   {
@@ -175,41 +175,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['This', 'sample', 'sentence', ',', 'showing', 'stop', 'words', 'filtration', '.']\n"
+     ]
+    }
+   ],
    "source": [
+    "from nltk.corpus import stopwords \n",
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
     "def remove_stopwords(l):\n",
-    "    \"\"\"\n",
-    "    Remove English stopwords from a list of strings.\n",
-    "\n",
-    "    Args:\n",
-    "        l: A list of strings.\n",
-    "\n",
-    "    Returns:\n",
-    "        A list of strings after stop words are removed.\n",
-    "    \"\"\"\n",
     "    \n",
-    "    \n",
-    "'''from nltk.corpus import stopwords \n",
-    "from nltk.tokenize import word_tokenize \n",
+    "    stop_words = set(stopwords.words('english'))\n",
     "  \n",
-    "example_sent = \"This is a sample sentence, showing off the stop words filtration.\"\n",
+    "    word_tokens = word_tokenize(l)\n",
     "  \n",
-    "stop_words = set(stopwords.words('english')) \n",
+    "    filtered_sentence = [word for word in word_tokens if not word in stop_words]\n",
     "  \n",
-    "word_tokens = word_tokenize(example_sent) \n",
+    "    filtered_sentence = []\n",
     "  \n",
-    "filtered_sentence = [w for w in word_tokens if not w in stop_words] \n",
-    "  \n",
-    "filtered_sentence = [] \n",
-    "  \n",
-    "for w in word_tokens: \n",
-    "    if w not in stop_words: \n",
-    "        filtered_sentence.append(w) \n",
-    "  \n",
-    "print(word_tokens) \n",
-    "print(filtered_sentence)'''"
+    "    for word in word_tokens: \n",
+    "        if word not in stop_words: \n",
+    "            filtered_sentence.append(word) \n",
+    "\n",
+    "    print(filtered_sentence)\n",
+    "\n",
+    "example = \"This is a sample sentence, showing off the stop words filtration.\"\n",
+    "remove_stopwords(example)"
    ]
   },
   {
