--- a/module-3/lab-nlp/challenge-2.ipynb
+++ b/module-3/lab-nlp/challenge-2.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -128,18 +128,33 @@
      "output_type": "stream",
      "text": [
       "['greater', 'tree', 'most', 'number', 'use', 'word', 'in', 'a', 'consequ', 'that']\n",
-      "['greater', 'tree', 'most', 'number', 'use', 'word', 'in', 'a', 'consequ', 'that']\n"
+      "['greater', 'tree', 'most', 'number', 'used', 'word', 'in', 'a', 'consequently', 'that']\n"
      ]
     }
    ],
    "source": [
-    "#import nltk.stem.porter\n",
-    "from nltk.stem.snowball import SnowballStemmer\n",
+    "from nltk.stem import SnowballStemmer\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "\n",
     "def stem_and_lemmatize(l):\n",
     "\n",
+    "    #from nltk.stem import PorterStemmer\n",
     "    #stemmer = PorterStemmer()\n",
+    "    #stemmed = stemmer.stem(l)\n",
+    "    #print(' '.join(stemmed))\n",
+    "    \n",
+    "    #from nltk.stem import SnowballStemmer\n",
+    "    #stemmer = SnowballStemmer()\n",
+    "    #stemmed = stemmer.stem(l)\n",
+    "    #print(' '.join(stemmed))\n",
+    "    \n",
+    "    #from nltk.stem import LancasterStemmer\n",
+    "    #stemmer = LancasterStemmer()\n",
+    "    #stemmed = stemmer.stem(l)\n",
+    "    #print(' '.join(stemmed))\n",
+    "    \n",
+    "    #from nltk.stem import RegexpStemmer\n",
+    "    #stemmer = RegexpStemmer()\n",
     "    #stemmed = stemmer.stem(l)\n",
     "    #print(' '.join(stemmed))\n",
     "    \n",
@@ -152,7 +167,7 @@
     "    \n",
     "    lemmatizer = WordNetLemmatizer()\n",
     "    lemma = []\n",
-    "    for word in stem:\n",
+    "    for word in l:\n",
     "        lemmas = (lemmatizer.lemmatize(word))\n",
     "        lemma.append(lemmas)\n",
     "    return print(lemma)\n",
