--- a/module-3/lab-nlp/challenge-2.ipynb
+++ b/module-3/lab-nlp/challenge-2.ipynb
@@ -172,7 +172,40 @@
     "        lemma.append(lemmas)\n",
     "    return print(lemma)\n",
     "\n",
-    "stem_and_lemmatize(['greater', 'trees', 'most', 'numbers', 'used', 'words', 'in', 'a', 'consequently', 'that'])"
+    "stem_and_lemmatize(['greater', 'trees', 'most', 'numbers', 'used', 'words', 'in', 'a', 'consequently', 'that'])\n",
+    "\n",
+    "'''sentence = \"The striped bats are hanging on their feet for best\"\n",
+    "\n",
+    "word_list = nltk.word_tokenize(sentence)\n",
+    "lemmatized_output = ' '.join([lemmatizer.lemmatize(w) for w in word_list])\n",
+    "print(lemmatized_output)\n",
+    "\n",
+    "# Lemmatize with POS Tag\n",
+    "from nltk.corpus import wordnet\n",
+    "\n",
+    "print(nltk.pos_tag(nltk.word_tokenize(sentence)))\n",
+    "\n",
+    "def get_wordnet_pos(word):\n",
+    "    \"\"\"Map POS tag to first character lemmatize() accepts\"\"\"\n",
+    "    tag = nltk.pos_tag([word])[0][1][0].upper()\n",
+    "    tag_dict = {\"J\": wordnet.ADJ,\n",
+    "                \"N\": wordnet.NOUN,\n",
+    "                \"V\": wordnet.VERB,\n",
+    "                \"R\": wordnet.ADV}\n",
+    "\n",
+    "    return tag_dict.get(tag, wordnet.NOUN)\n",
+    "\n",
+    "# 1. Init Lemmatizer\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "# 2. Lemmatize Single Word with the appropriate POS tag\n",
+    "word = 'feet'\n",
+    "print(lemmatizer.lemmatize(word, get_wordnet_pos(word)))\n",
+    "\n",
+    "# 3. Lemmatize a Sentence with the appropriate POS tag\n",
+    "sentence = \"The striped bats are hanging on their feet for best\"\n",
+    "print([lemmatizer.lemmatize(w, get_wordnet_pos(w)) for w in nltk.word_tokenize(sentence)])\n",
+    "#> ['The', 'strip', 'bat', 'be', 'hang', 'on', 'their', 'foot', 'for', 'best']'''"
    ]
   },
   {
